formatting table title image added

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     font-style: italic;
     font-size: 55px;
     font-weight: bold;
+        
 }
 
 .title {
@@ -23,7 +24,8 @@
 }
 
 .link:hover {
-    text-decoration: none;
+    text-decoration: none
+    ;
 }
 
 .link:visited {
@@ -34,19 +36,13 @@
     list-style-type:square;
 }
 
-/* колір всього тексту на сторінці має бути #333;
-шрифт має бути без засічок (Arial, Helvetica, sans-serif);
+.section {
+    border-bottom: 2px solid #00f;;
+}
 
-текст з позицією має бути жирний засобами CSS;
+.image {
+    border: 2px solid #00f;
+    border-color: #00f;
+    padding: 10px;
+}
 
-імʼя має бути нахиленим;
-
-заголовки в таблиці мають бути написаними великими літерами;
-
-посилання мають мати колір #00f та бути підкресленими;
-
-відвідані посилання мають мати колір #005 та мають бути підкресленими;
-
-при наведенні на посилання підкреслення має пропасти;
-
-в списку з вміннями показники мають бути квадратними. */
