--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.text {
+* {
     font-family: Arial, Helvetica, sans-serif; 
     color: #333
 }
@@ -36,13 +36,58 @@
     list-style-type:square;
 }
 
-.section {
-    border-bottom: 2px solid #00f;;
+.section-title {
+    border-bottom: 2px solid #00f;
+    margin: 10px;
 }
 
 .image {
     border: 2px solid #00f;
     border-color: #00f;
     padding: 10px;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    margin-top: 5px;
+    }
+
+.top-section {
+    display: grid;
+    
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 3fr 1fr;
+    grid-column-gap:50px;
+    grid-row-gap: 2px;
+
+    }
+    
+.div1 { 
+    grid-area: 1 / 1 / 2 / 2; 
+}
+.div2 { 
+    grid-area: 2 / 1 / 3 / 2; 
+}
+.div3 { 
+    grid-area: 1 / 2 / 3 / 3; 
+    justify-content:center;
+    display: flex;
+    margin: 10px;
+    }
+
+.main-section {
+    width: 100%;
+    display: flex;
+    }
+
+td {
+    background-color: rgb(241, 245, 18); 
+    color:blue 
+}
+tr {
+    background-color: rgb(77, 77, 252); 
+    color: aliceblue;
 }
 
+table {
+    width: 100%
+}
