--- a/cv-styles.css
+++ b/cv-styles.css
@@ -4,13 +4,18 @@
     font-family: 'Inter', sans-serif;
 }
 
+.wrapper {
+    display: flex;
+}
+
 .column-left {
     float: left;
     width: 35%;
     padding: 0px;
     background-color: #86A3B4;
-    height: 100%;
+    
 }
+
 
 .column-right {
     float: left;
@@ -44,7 +49,6 @@
 .left-section {
     padding-left: 40px;
     padding-right: 54px;
-    
 }
 
 h2 {
@@ -126,4 +130,9 @@ ul {
     display: block;
     font-size: 16px;
     color: #263036;
+  }
+
+  .left-info {
+    position: sticky;
+    top: 0px;
   }
