--- a/cv-styles.css
+++ b/cv-styles.css
@@ -12,21 +12,19 @@
 
 .column-left {
     
-    width: 15%;
+    width: 18%;
     padding: 0px;
     margin-left: 20px;
     background-color: #86A3B4;
-    position: sticky;
-    top: 0px;
-    position: -webkit-sticky;
-    height: 700px;
+    position: fixed;
+    top:0;
   }
 
 
 .column-right {
     
-    width: 25%;
-    padding-left: 55px;
+    width: 50%;
+    padding-left: 370px;
     padding-top: 0px;
 }
 
