--- a/styleform.css
+++ b/styleform.css
@@ -2,21 +2,21 @@
 
 body {
   width: 1024px;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
 }
 
 .hire-me {
   display: flex;
-  align-items: center;
-  justify-content: center;
+
 }
 
 fieldset {
   border-radius: 12px;
   border: 1px solid #F2ECFF;
   box-shadow: 0px 2px 4px rgba(0, 72, 217, 0.1), 0px 24px 60px rgba(0, 72, 217, 0.05), 0px 12px 24px rgba(0, 72, 217, 0.05);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 
